# triangle-thing

./: Cargo.toml
src/: main.rs
