[package]
name = "triangle-thing"
version = "1.0.0"
edition = "2021"
authors = ["Nico"]
description = "Program that (given the number of rows as input) prints character appending self everytime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
